# firmware-eta-compute-ecm3532

./: .gitignore  LICENSE-TENSAIFLOW.docx  README.md
Platform/ECM3532/DSP/: CMakeLists.txt  Kconfig  appKconfig  cf16_toolchain.cmake
Platform/ECM3532/DSP/app/eta_math_lib_test/: CMakeLists.txt  Kconfig
Platform/ECM3532/DSP/app/eta_math_lib_test/src/: exp_test.c  log_test.c  main.c  sqrt_test.c
Platform/ECM3532/DSP/app/executor_test/: Kconfig  config.h
Platform/ECM3532/DSP/app/executor_test/src/: main.c
Platform/ECM3532/DSP/app/hello_world/: Kconfig  config.h
Platform/ECM3532/DSP/app/hello_world/src/: hello.c
Platform/ECM3532/DSP/app/i2c_test/: Kconfig  config.h
Platform/ECM3532/DSP/app/i2c_test/src/: i2c_test.c
Platform/ECM3532/DSP/app/kernel_test/: CMakeLists.txt  Kconfig  config.h
Platform/ECM3532/DSP/app/kernel_test/inc/: kernel_tests.h
Platform/ECM3532/DSP/app/kernel_test/src/: main.c  test_2x2_conv2d_relu_pool.c  test_3x3_conv2d_relu_pool.c  test_eta_conv2d_q7_chw_ker2x2_stride2_pad0_relu.c  test_eta_conv2d_q7_chw_ker3x3_stride1_pad0_relu.c  test_eta_conv2d_q7_chw_ker3x3_stride2_pad0_relu.c  test_eta_convolve_CHW_q7_ker2x2_stride2_pad0_relu_dsp.c  test_eta_convolve_CHW_q7_ker3x3_stride2_pad0_relu_dsp.c  test_pw_kernel.c
Platform/ECM3532/DSP/app/malloc_test/: CMakeLists.txt  Kconfig  config.h
Platform/ECM3532/DSP/app/malloc_test/src/: test_malloc.c
Platform/ECM3532/DSP/app/pdm_test/: Kconfig  config.h
Platform/ECM3532/DSP/app/pdm_test/src/: main.c
Platform/ECM3532/DSP/app/sensor_test/: Kconfig  config.h
Platform/ECM3532/DSP/app/sensor_test/src/: main.c
Platform/ECM3532/DSP/app/timer_test/: Kconfig  config.h
Platform/ECM3532/DSP/app/timer_test/src/: timer_test.c
Platform/ECM3532/DSP/audio/: Kconfig
Platform/ECM3532/DSP/audio/pdm/: CMakeLists.txt
Platform/ECM3532/DSP/audio/pdm/inc/: pdm_audio.h
Platform/ECM3532/DSP/audio/pdm/src/: pdm_audio.c
Platform/ECM3532/DSP/cmake/: doxy.cmake  extensions.cmake  index.md
Platform/ECM3532/DSP/configs/: dsp_src_package_defconfig  executor_test_dsp_defconfig  i2c_test_dsp_defconfig  kernel_test_dsp_defconfig  malloc_test_dsp_defconfig  pdm_test_dsp_defconfig  sensor_test_dsp_defconfig  timer_test_dsp_defconfig
Platform/ECM3532/DSP/eta_math/: CMakeLists.txt  Kconfig
Platform/ECM3532/DSP/eta_math/inc/: eta_math.h
Platform/ECM3532/DSP/executor/: CMakeLists.txt  Kconfig
Platform/ECM3532/DSP/executor/inc/: executor_public.h
Platform/ECM3532/DSP/executor/inc/tmp_test_vec/: test_2x2_conv_relu_pool_2.h  test_2x2_conv_relu_pool_3.h  (+6 more)
Platform/ECM3532/DSP/framework/: CMakeLists.txt  Kconfig
Platform/ECM3532/DSP/framework/inc/: dsp_fw_cfg.h  dsp_malloc.h  dsp_msg.h  dsp_support.h  dsp_task.h  m3Interface.h  timer.h  utility.h
Platform/ECM3532/DSP/framework/src/: dsp_malloc.c  dsp_msg.c  dsp_task.c  m3Interface.c  timer.c  utility.c  workQ_common.c
Platform/ECM3532/DSP/hw/csp/: CMakeLists.txt
Platform/ECM3532/DSP/hw/sensor_drv/: CMakeLists.txt
Platform/ECM3532/DSP/kernel/: CMakeLists.txt  Kconfig
Platform/ECM3532/DSP/kernel/inc/: eta_dsp_nn.h  eta_types.h
Platform/ECM3532/DSP/sensor_mgr/: CMakeLists.txt  Kconfig
Platform/ECM3532/DSP/sensor_mgr/inc/: dspI2c.h  sensor.h
Platform/ECM3532/DSP/sensor_mgr/src/: dspI2c.c  sensor.c
Platform/ECM3532/DSP/tools/: create_dsp_include.pl  create_dsp_include_3532.pl  genDSPBin.py  hack_data_memory
Platform/ECM3532/M3/: CMakeLists.txt  ECM35xx_toolchain.cmake  Kconfig  appKconfig
Platform/ECM3532/M3/NN_kernels/include/: eta_nn_tables.h  eta_nnfunctions.h  eta_nnsupportfunctions.h  eta_types.h
Platform/ECM3532/M3/cmake/: doxy.cmake  extensions.cmake  index.md
Platform/ECM3532/M3/cmake/SEGGER/: ECM3532.JLinkScript  genSESproject.cmake  genSESproject.py  ses.xml
Platform/ECM3532/M3/cmake/resources/: footer.html  header.html
Platform/ECM3532/M3/configs/: MSFT_defconfig  ai_sensor_board_pdm_defconfig  ai_sensor_board_sensor_fwk_icm20602_defconfig  ai_vision_extension_camera_defconfig  ambient_light_sensor_defconfig  bootloader_defconfig  camera_defconfig  compiler_tool_cifar10_defconfig  compiler_tool_demo_defconfig  compiler_tool_person_det_defconfig  dsp_hello_world_defconfig  dsp_sensor_fwk_defconfig  dw_dsp_debug  executor_cifar10_defconfig  executor_demo_cifar10_defconfig_row32  executor_demo_cifar10_defconfig_row6  executor_demo_cifar10_defconfig_unit_test  executor_demo_person_det_defconfig  i2c_display_defconfig  m3_cvfs_defconfig  pdm_defconfig  pdm_executor_mathfun_defconfig  pw_dsp_debug  rtc_defconfig  sensor_fwk_composite_fft_defconfig  sensor_fwk_pp_fft_defconfig  spi_flash_defconfig  spi_ms_slave_defconfig  src_package_all_defconfig  src_package_defconfig
Platform/ECM3532/M3/framework/executor/: CMakeLists.txt  Kconfig
Platform/ECM3532/M3/framework/rpc/: CMakeLists.txt  Kconfig
Platform/ECM3532/M3/framework/sensor_mgr/: CMakeLists.txt  Kconfig
Platform/ECM3532/M3/framework/serial_proto/: CMakeLists.txt  Kconfig
Platform/ECM3532/M3/hw/: CMakeLists.txt
Platform/ECM3532/M3/hw/board/: CMakeLists.txt
Platform/ECM3532/M3/hw/csp/: CMakeLists.txt
Platform/ECM3532/M3/hw/drivers/: Kconfig
Platform/ECM3532/M3/hw/include/: CMakeLists.txt  cm3.h  errno.h  pm.h
Platform/ECM3532/M3/hw/ipc/: CMakeLists.txt
Platform/ECM3532/M3/hw/power/: CMakeLists.txt
Platform/ECM3532/M3/hw/sensor_drv/: Kconfig
Platform/ECM3532/M3/scripts/: flash_erase.py  flash_program.py  gdb_cmd_flash  gdb_cmd_flash_jlink  gdb_cmd_ram  gdb_cmd_ram_jlink  load_program.py  load_program_cayman.py  ocd  program.py
Platform/ECM3532/M3/scripts/linker/: flash.ld.S  flash_bootloader.ld.S  flash_relocate_to_ram.ld.S  flash_shm.ld.S  flash_shm_relocate_to_ram.ld.S  ram.ld.S  ram_shm.ld.S
Platform/ECM3532/M3/util/: CMakeLists.txt
Platform/ECM3532/M3/util/console/: CMakeLists.txt
Platform/ECM3532/M3/util/dsp_fw/: CMakeLists.txt
Platform/ECM3532/M3/util/dsp_helper/: CMakeLists.txt
Platform/ECM3532/M3/util/helper_func/: CMakeLists.txt
Platform/ECM3532/M3/util/include/: CMakeLists.txt  helper_func.h  incbin.h  print_util.h
soc/: Makefile
(+531 files in other folders)
