SUBDIRLIST(SDIRS ${CMAKE_CURRENT_LIST_DIR})
set(getsoc "CONFIG_SOC")
CONFIGVAL(socname ${getsoc})
add_subdirectory(${socname})
add_subdirectory(common)
GETCONFIG(varen "PM_SRC_PACKAGE")
string(COMPARE EQUAL "${varen}" y _cmp1)
set(rmsrc "")
if (NOT _cmp1)
    FOREACH(subdir ${SDIRS})
        set(rmsrc ${rmsrc};power/${subdir}/src)
    ENDFOREACH()
    get_property(ignore_list GLOBAL PROPERTY ignore_list_property)
    set_property(GLOBAL PROPERTY ignore_list_property "${ignore_list};${rmsrc}")
endif()
