SUBDIRLIST(SDIRS ${CMAKE_CURRENT_LIST_DIR})
FOREACH(subdir ${SDIRS})
  ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()
GETCONFIG(varen "HAL_SRC_PACKAGE")
set(rmsrc "")
string(COMPARE EQUAL "${varen}" y _cmp1)
if (NOT _cmp1)
    FOREACH(subdir ${SDIRS})
        set(rmsrc ${rmsrc};hal/common/${subdir}/src)
    ENDFOREACH()
    get_property(ignore_list GLOBAL PROPERTY ignore_list_property)
    set_property(GLOBAL PROPERTY ignore_list_property "${ignore_list};${rmsrc}")
endif()
